--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,9 @@
-markdown: redcarpet
-baseurl: /
+#Site settings
+title: Corrib Digital
+email: michael@corribdigital.com
+description: Welcome to Corrib Digital. We are web designers and developers
+
+markdown: kramdown
+permalink: pretty
+baseurl: ""
 exclude: ['README.md']
